--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,12 @@
 name = "arccrypt"
 version = "0.1.0"
 edition = "2021"
-authors = ["314ShadePi", "S3llen3"]
-readme = "README.md"
-description = "A Blockchain in Rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4.23", features = ["serde"], default-features = true }
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.88"
+sha2 = "0.10.6"
+sha256 = "1.1.1"
