--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.23", features = ["serde"], default-features = true }
+chrono = { version = "0.4.23", features = ["serde"] }
+secp256k1 = { version = "0.24.1", features = ["serde", "rand-std", "bitcoin_hashes"] }
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.88"
 sha2 = "0.10.6"
