--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.23", features = ["serde"] }
+hex = { version = "0.4.3", features = ["serde"] }
 secp256k1 = { version = "0.24.1", features = ["serde", "rand-std", "bitcoin_hashes"] }
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.88"
 sha2 = "0.10.6"
 sha256 = "1.1.1"
+bitcoin_hashes = "0.11.0"
