--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde_json = "1.0.88"
 sha2 = "0.10.6"
 sha256 = "1.1.1"
 bitcoin_hashes = "0.11.0"
+uuid = { version = "1.2.2", features = ["v4", "serde"] }
