--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ sha2 = "0.10.6"
 sha256 = "1.1.1"
 bitcoin_hashes = "0.11.0"
 uuid = { version = "1.2.2", features = ["v4", "serde"] }
+dyn-clonable = "0.9.0"
+typetag = "0.2.4"
+mopa = "0.2.2"
