--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,15 @@
-[package]
-name = "arccrypt"
+[workspace]
+members = ["crates/arccrypt_core", "crates/dev_helpers"]
+
+[workspace.package]
 version = "0.1.0"
+authors = ["314ShadePi <erikkirkegaardstage@gmail.com>"]
+
+[package]
+name = "arccrypt_cli"
+version.workspace = true
+authors.workspace = true
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-chrono = { version = "0.4.23", features = ["serde"] }
-hex = { version = "0.4.3", features = ["serde"] }
-secp256k1 = { version = "0.24.1", features = ["serde", "rand-std", "bitcoin_hashes"] }
-serde = { version = "1.0.147", features = ["derive"] }
-serde_json = "1.0.88"
-sha2 = "0.10.6"
-sha256 = "1.1.1"
-bitcoin_hashes = "0.11.0"
-uuid = { version = "1.2.2", features = ["v4", "serde"] }
-dyn-clonable = "0.9.0"
-typetag = "0.2.4"
-mopa = "0.2.2"
+arccrypt_core = { path = "./crates/arccrypt_core" }
