--- a/crates/arccrypt_core/Cargo.toml
+++ b/crates/arccrypt_core/Cargo.toml
@@ -7,3 +7,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+arccrypt_macros = { path = "../arccrypt_macros" }
+log = "0.4.17"
+chrono = { version = "0.4.23", features = ["serde"] }
+hex = { version = "0.4.3", features = ["serde"] }
+secp256k1 = { version = "0.24.1", features = ["serde", "rand-std", "bitcoin_hashes"] }
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.88"
+sha2 = "0.10.6"
+sha256 = "1.1.1"
+bitcoin_hashes = "0.11.0"
+uuid = { version = "1.2.2", features = ["v4", "serde"] }
+dyn-clonable = "0.9.0"
+typetag = "0.2.4"
+mopa = "0.2.2"
+strum = { version = "0.24.1", features = ["derive"] }
