--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/arccrypt_core", "crates/arccrypt_macros", "crates/dev_helpers"]
+members = ["crates/arccrypt", "crates/arccrypt_core", "crates/arccrypt_macros", "crates/dev_helpers"]
 
 [workspace.package]
 version = "0.1.0"
@@ -12,4 +12,7 @@ authors.workspace = true
 edition = "2021"
 
 [dependencies]
-arccrypt_core = { path = "./crates/arccrypt_core" }
+arccrypt = { path = "./crates/arccrypt" }
+secp256k1 = { version = "0.24.1", features = ["serde", "rand-std", "bitcoin_hashes"] }
+serde = { version = "1.0.151", features = ["derive"] }
+serde_json = "1.0.91"
